--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             return;
         }
         let urlencoded = encodeURIComponent(msg);
-        fetch("http://jvmgopgt3.sv1.k9s.run:2271/?q=" + urlencoded).then(function (response) {
+        fetch("http://jvmgopgt3.sv1.k9s.run:2271/?q=" + urlencoded, {
+            "method": "GET",
+            "mode": "cors"
+        }).then(function (response) {
             return response.text();
         }).then(function (text) {
             console.log(text);
