--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <body>
 <h1>GPT3 Chat Server</h1>
 <form onsubmit="send();return false;">
-    <input type="text" style="width: 400px;" id="message"/><br>
+    <input type="text" style="width: 400px;" id="message"/>
+    <button onclick="send()">Send</button>
 </form>
 <div id="answer">
     <ul id="answer_list">
