--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>GPT3 Chat Server</h1>
 <form onsubmit="send();return false;">
     <input type="text" style="width: 400px;" id="message"/>
-    <button onclick="send()">Send</button>
+    <button type="submit">Send</button>
 </form>
 <div id="answer">
     <ul id="answer_list">
